test_suite5/ALAN/test_suite/alan-2022-examples/failing/003680_mutation.alan
source hG71 begin if 72 then relax end relax end
